add RethinkDB, testing client-server comms with 'channel add'...no errors but no DB entry either. sleep now, fix later

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,22 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# yanked from rethinkdb.gitignore
+/.bundle/
+/.yardoc
+/Gemfile.lock
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+*.bundle
+*.so
+*.o
+*.a
+mkmf.log
+log/*.log
+.ruby-version
+rethinkdb_data
